--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lodash.update": "^4.10.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-tooltip": "^4.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
